# qlog

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: config.yml
benchmarks/: bench.py
examples/: demo.sh
qlog/: __init__.py  cli.py  indexer.py  search.py
